--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
-name: Generate Animation
+name: generate animation
 
 on:
-  # run automatically every 12 hours
+  # run automatically every 24 hours
   schedule:
     - cron: "0 */12 * * *"
 
@@ -19,14 +19,8 @@ jobs:
     timeout-minutes: 10
 
     steps:
-      # Set up Git user information
-      - name: Set up Git
-        run: |
-          git config --global user.name "muizzkarim10"
-          git config --global user.email "muizzkarim10@gmail.com"
-
-      # Generate the snake animation SVG
-      - name: Generate github-contribution-grid-snake.svg
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
@@ -36,15 +30,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Commit the SVG to the output branch
-      - name: Commit changes
-        run: |
-          git add dist/github-contribution-grid-snake.svg
-          git commit -m "Update contribution snake" || echo "No changes to commit"
-
-      # Push the changes to the output branch
-      - name: Push changes to the output branch
-        run: |
-          git push origin output
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
