--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: Generate Datas
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+  schedule:
+    - cron: "0 */12 * * *" # execute every 12 hours
   workflow_dispatch:
+
 jobs:
   build:
     name: Jobs to update datas
@@ -11,11 +12,25 @@ jobs:
       # Snake Animation
       - uses: Platane/snk@master
         id: snake-gif
-  
         with:
           github_user_name: muizzkarim10
           svg_out_path: dist/github-contribution-grid-snake.svg
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+
+      # Set up Git
+      - name: Set up Git
+        run: |
+          git config --global user.name "Muizz Karim"
+          git config --global user.email "your_email@example.com"  # Use your GitHub email
+
+      # Commit changes
+      - name: Commit changes
+        run: |
+          git add dist/github-contribution-grid-snake.svg
+          git commit -m "Update contribution snake" || echo "No changes to commit"
+
+      # Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
