--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,39 @@
-name: Generate Datas
+name: generate animation
+
 on:
+  # run automatically every 24 hours
   schedule:
-    - cron: "0 */12 * * *" # execute every 12 hours
+    - cron: "0 */12 * * *"
+
+  # allows to manually run the job at any time
   workflow_dispatch:
 
+  # run on every push on the main branch
+  push:
+    branches:
+      - main
+
 jobs:
-  build:
-    name: Jobs to update datas
+  generate:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+
     steps:
-      # Snake Animation
-      - uses: Platane/snk@master
-        id: snake-gif
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: muizzkarim10
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Set up Git
-      - name: Set up Git
-        run: |
-          git config --global user.name "muizzkarim10"
-          git config --global user.email "muizzkarim10@gmail.com"
-
-      # Commit changes
-      - name: Commit changes
-        run: |
-          git add dist/github-contribution-grid-snake.svg
-          git commit -m "Update contribution snake" || echo "No changes to commit"
-
-      # Deploy to GitHub Pages
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.1.3
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
